maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:53: error: not found: value x0
  setIndication(x0,y0,0)
                ^ShortestPathMaze:53: error: not found: value y0
  setIndication(x0,y0,0)
                   ^